🐛 Add Logo Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!-- Sidebar -->
   <aside class="sidebar">
     <div class="logo-container">
-      <img src="/angular.svg" alt="Logo angular" width="70" height="70" />
+      <img src="./angular.svg" alt="Logo angular" width="70" height="70" />
       <h2 class="logo-text">DECRYPT</h2>
       <p class="version-text">v {{ version }}</p>
     </div>
