--- a/src/app/modules/decrypt/views/header/header.component.html
+++ b/src/app/modules/decrypt/views/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header">
   <div class="logos-container">
-    <img src="images/radix.svg" alt="Logo 1" class="logo">
+    <img src="images/vass.png" alt="Logo 1" class="logo">
     <div class="vertical-divider"></div>
     <img src="images/workOS.svg" alt="Logo 2" class="logo">
   </div>
