✨ Refactor SCSS for decrypt area; replace darken function with color.adjust for improved color management

--- a/src/app/modules/decrypt/views/decrypt-area/decrypt-area.component.scss
+++ b/src/app/modules/decrypt/views/decrypt-area/decrypt-area.component.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 .decrypt-container {
   position: relative;
   z-index: 5;
@@ -154,7 +156,7 @@
           }
 
           &:hover {
-            background-color: darken(#3CBCDD, 5%);
+            background-color: color.adjust(#3CBCDD, $lightness: -5%);
           }
 
           &:disabled {
