--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-// Variables
+// styless.scss
 $dark-bg-primary: #111111;
 $dark-bg-secondary: oklch(31.7% 0.0653 219 / 1);
 $text-primary: #FFFFFF;
