✨ Add EncryptAreaComponent for secure encryption functionality; update app layout to include encryption feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="app-container">
   <div class="gradient-overlay"></div>
-  <app-header></app-header>
-  <app-decrypt-area></app-decrypt-area>
+  <app-header/>
+  <app-encrypt-area/>
+<!--   <app-decrypt-area/> -->
 </div>
 
 
